[tool.poetry]
name = "hyperinverter"
version = "0.1.0"
description = ""
authors = ["Hina39 <hiinyan3939@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dlib = "^19.24.2"
ninja = "1.10.2.3"
opencv-python = "<=4.6"
numpy = "<=1.26.2"
scipy = "<=1.11.3"
six = "^1.16.0"
beautifulsoup4 = "^4.12.2"
certifi = "^2023.7.22"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
cycler = "<=0.11.0"
docker-pycreds = "^0.4.0"
filelock = "<=3.13.1"
fonttools = "<=4.44.0"
gdown = "^4.7.1"
gitdb = "^4.0.11"
gitpython = "^3.1.40"
idna = "^3.4"
importlib-metadata = "<=6.8.0"
kiwisolver = "^1.4.5"
matplotlib = "<=3.8.1"
packaging = "^23.2"
pathtools = "^0.1.2"
pillow = "<=10.1.0"
promise = "^2.3"
protobuf = "<=4.25.0"
psutil = "^5.9.6"
pyparsing = "^3.1.1"
pysocks = "^1.7.1"
python-dateutil = "^2.8.2"
pyyaml = "^6.0.1"
requests = "^2.31.0"
sentry-sdk = "^1.35.0"
setproctitle = "^1.3.3"
shortuuid = "^1.0.11"
smmap = "^5.0.1"
soupsieve = "<=2.5"
termcolor = "^2.3.0"
torch-fidelity = "^0.3.0"
tqdm = "^4.66.1"
typing-extensions = "<=4.8.0"
urllib3 = "<=2.1.0"
wandb = "^0.16.0"
yaspin = "<=3.0.1"
zipp = "<=3.17.0"
torch = { url = "https://download.pytorch.org/whl/cu111/torch-1.8.1%2Bcu111-cp37-cp37m-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu111/torchvision-0.9.1%2Bcu111-cp37-cp37m-linux_x86_64.whl"}
piq = "<=0.8.0"

[tool.poetry.dev-dependencies]


[[tool.poetry.source]]
name = "torch_cu111"
url = "https://download.pytorch.org/whl/torch_stable.html"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
